- changed from templates

--- a/astrogrid/old-portal/build.xml
+++ b/astrogrid/old-portal/build.xml
@@ -1,4 +1,4 @@
-<project name="project-name" basedir="." default="build">
+<project name="astrogrid-portal" basedir="." default="build">
 
   <target name="init">
     <property name="src.dir" value="${basedir}/src/java"/>
