- changed from templates - uses local library file

--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -1,1 +1,7 @@
 maven.repo.remote = http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+
+# enable maven jar overriding.
+maven.jar.override = on
+
+# use local votable utilities
+maven.jar.objectwiz-votable = ${basedir}/lib/objectwiz-votable.jar
