--- a/astrogrid/datacenter/build.xml
+++ b/astrogrid/datacenter/build.xml
@@ -1,4 +1,4 @@
-<project name="project-name" basedir="." default="build">
+<project name="astrogrid-datacenter" basedir="." default="build">
 
   <target name="init">
     <property name="src.dir" value="${basedir}/src/java"/>
