--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
@@ -21,6 +21,10 @@ MESSAGES.INSTALLATION.BASENAME=ASTROGRID_datacentermessages
 MESSAGES.INSTALLATION.LANGUAGECODE=
 MESSAGES.INSTALLATION.COUNTRYCODE=
  
+#
+# Switches validation on/off for query request documents 
+#
+PARSER.VALIDATION=false
  
 #
 # Each catalog can possess its own query factory, or share a query factory.
