--- a/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
@@ -21,6 +21,10 @@ MESSAGES.INSTALLATION.BASENAME=ASTROGRID_jesmessages
 MESSAGES.INSTALLATION.LANGUAGECODE=
 MESSAGES.INSTALLATION.COUNTRYCODE=
  
+#
+# Switches validation on/off for job submission request documents 
+#
+PARSER.VALIDATION=false
 
 #
 # A job factory and database is required of each JES
