--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
@@ -4,34 +4,38 @@
 # Format of the message key: AGDTCEnnnnn
 # AG       AstroGrid
 # DTC      DaTaCenter
-# E/W/I    E = error,  W = warning  I = information
+# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program
 # nnnnn    unique message number
 #
 # Format of the message body:
 # <datacenter-component-name>: <rest-of-message>
 # See documentation for MessageFormat class for inserts into messages (e.g. {0})
 #
-AGDTCE00???=YOU FORGOT TO DEFINE A MESSAGE!!!
+# Note Z style messages (e.g. AGDTCZ00001) are included here for documentary purposes only.
+#
+AGJESZ00001=AGJESZ00001:DatasetAgent: Could not read my configuration file {0}
+AGJESZ00002=AGJESZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
+AGJESZ00003=AGJESZ00003:Message: Message key is null.
+AGJESZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
+AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 
-AGDTCE00010=DatasetAgent: Could not read my configuration file {0}
-AGDTCE00020=DatasetAgent: Not initialized. Perhaps my configuration file is missing.
-AGDTCE00030=DatasetAgent: Failed to parse Job Request.
-AGDTCE00040=DatasetAgent: Query ultimately failed. See previous messages.
+AGDTCE00030=:DatasetAgent: Failed to parse Job Request.
+AGDTCE00040=:DatasetAgent: Query ultimately failed. See previous messages.
 
-AGDTCE00050=Query: Could not create QueryFactory {0}
-AGDTCE00060=QueryFactory: Could not create datasource for datasource name: {0}, for catalog: {1}
-AGDTCE00070=QueryFactory: Could not create connection.
-AGDTCE00080=QueryFactory: Execution of query failed.
+AGDTCE00050=:Query: Could not create QueryFactory {0}
+AGDTCE00060=:QueryFactory: Could not create datasource for datasource name: {0}, for catalog: {1}
+AGDTCE00070=:QueryFactory: Could not create connection.
+AGDTCE00080=:QueryFactory: Execution of query failed.
 
-AGDTCE00090=Allocation: Could not create MySpaceFactory {0}
-AGDTCE00100=MySpaceFactory: Could not create MySpace cache allocation for job {0}
-AGDTCE00110=MySpaceFactory: Could not destroy compressed stream.
+AGDTCE00090=:Allocation: Could not create MySpaceFactory {0}
+AGDTCE00100=:MySpaceFactory: Could not create MySpace cache allocation for job {0}
+AGDTCE00110=:MySpaceFactory: Could not destroy compressed stream.
 
-AGDTCE00120=VOTable: Could not create VOTableFactory {0}
-AGDTCE00130=VOTableFactory: Could not convert query result to VOTable
+AGDTCE00120=:VOTable: Could not create VOTableFactory {0}
+AGDTCE00130=:VOTableFactory: Could not convert query result to VOTable
 
-AGDTCE00140=Job: Could not create JobFactory {0}
-AGDTCE00150=JobFactory: Could not create Job datasource {0}
-AGDTCE00160=JobFactory: Could not create connection to Job datasource.
-AGDTCE00170=JobFactory: Unable to create Job from request document. 
-AGDTCE00180=JobImpl: Unable to creat Job from request document
+AGDTCE00140=:Job: Could not create JobFactory {0}
+AGDTCE00150=:JobFactory: Could not create Job datasource {0}
+AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
+AGDTCE00170=:JobFactory: Unable to create Job from request document. 
+AGDTCE00180=:JobImpl: Unable to creat Job from request document
