--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
@@ -84,3 +84,4 @@ MYSPACECACHE_DIRECTORY=tmp
 #
 JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
 JOB.DATASOURCE=java:comp/env/job-datasource
+JOB.TABLENAME=JOB
