--- a/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
@@ -22,6 +22,15 @@ MESSAGES.INSTALLATION.LANGUAGECODE=
 MESSAGES.INSTALLATION.COUNTRYCODE=
  
 #
+# Each JES installation must have its own unique id.
+# It doesn't matter what it is as long as it is unique
+# and alphanumeric, including the underscore character.
+# It helps if it is humanly readable.
+#
+JES.ID=JESLeicester01
+
+
+#
 # Switches validation on/off for job submission request documents 
 #
 PARSER.VALIDATION=false
