*** empty log message ***

--- a/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
@@ -29,7 +29,6 @@ MESSAGES.INSTALLATION.COUNTRYCODE=
 #
 JES.ID=JESLeicester01
 
-
 #
 # Switches validation on/off for job submission request documents 
 #
@@ -40,3 +39,46 @@ PARSER.VALIDATION=false
 #
 JOB.FACTORY=org.astrogrid.jes.impl.JobFactoryImpl
 JOB.DATASOURCE=java:comp/env/job-datasource
+
+#
+# The table names for the job database
+#
+JOB.TABLENAME=JOB
+JOBSTEP.TABLENAME=JOBSTEP
+QUERY.TABLENAME=QUERY
+CATALOG.TABLENAME=CATALOG
+TABLE.TABLENAME=TABLE
+SERVICE.TABLENAME=SERVICE
+
+#
+# Submit Job Response Template
+#
+SUBMIT.JOB.RESPONSE= /
+<?xml version = '1.0' encoding = 'UTF8'?> /
+	<response> /
+	   <job> /
+		  <userid>{0}</userid> /
+		  <community>{1}</community> /
+		  <time>{2}</time> /
+		  <jobid>{3}</jobid> /
+	   </job> /
+	   <message>{4}</message> /
+	 </response>
+
+#
+# Location of our JobScheduler
+#	 
+SCHEDULER.URL=http://hydra.star.le.ac.uk/astrogrid/services/SchedulerService	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
+	 
