*** empty log message ***

--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
@@ -75,8 +75,14 @@ MYSPACEFACTORY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
 # Local directory where temporary files associated with the MySpace facility 
 # can be created (e.g. for the purposes of holding a votable to be ftp'd to MySpace).
 # The format is operating system dependent and can be a relative- or a fully-
-# qualifief path.
+# qualified path.
 MYSPACECACHE_DIRECTORY=tmp
+
+#
+# This is the URL for the MySpace facility closest and most convenient
+# for this datacenter...
+#
+MYSPACE.URL=www.star.le.ac.uk/MySpace
 
 #
 # A job factory and database is required of each datacenter
