*** empty log message ***

--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
@@ -23,6 +23,7 @@ AGDTCE00030=:DatasetAgent: Failed to parse Job Request.
 AGDTCE00040=:DatasetAgent: Query ultimately failed. See previous messages.
 
 AGDTCE00050=:Query: Could not create QueryFactory {0}
+AGDTCE00055=:Query: Could not create Query from elements.
 AGDTCE00060=:QueryFactory: Could not create datasource for datasource name: {0}, for catalog: {1}
 AGDTCE00070=:QueryFactory: Could not create connection.
 AGDTCE00080=:QueryFactory: Execution of query failed.
@@ -39,3 +40,6 @@ AGDTCE00150=:JobFactory: Could not create Job datasource {0}
 AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
 AGDTCE00170=:JobFactory: Unable to create Job from request document. 
 AGDTCE00180=:JobImpl: Unable to creat Job from request document
+
+AGDTCE00200=:From: Could not create From from element.
+AGDTCE00210=:From: Could not create SQL for From.
