--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datacentermessages.properties
@@ -43,3 +43,9 @@ AGDTCE00180=:JobImpl: Unable to creat Job from request document
 
 AGDTCE00200=:From: Could not create From from element.
 AGDTCE00210=:From: Could not create SQL for From.
+
+AGDTCE00220=:Criteria: Could not create Criteria element.
+AGDTCE00230=:Criteria: Could not create SQL for Criteria.
+
+AGDTCE00240=:Return: Could not create Return element.
+AGDTCE00250=:Return: Could not create SQL for Return.
