--- a/astrogrid/old-portal/build.xml
+++ b/astrogrid/old-portal/build.xml
@@ -2,13 +2,16 @@
 <!--
 <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/old-portal/Attic/build.xml,v $</cvs:source>
 <cvs:date>$Author: dave $</cvs:date>
-<cvs:author>$Date: 2003/06/03 13:16:47 $</cvs:author>
-<cvs:version>$Revision: 1.3 $</cvs:version>
+<cvs:author>$Date: 2003/06/03 13:45:22 $</cvs:author>
+<cvs:version>$Revision: 1.4 $</cvs:version>
 <cvs:log>
 	$Log: build.xml,v $
+	Revision 1.4  2003/06/03 13:45:22  dave
+	Removed lib from classpath reference
+
 	Revision 1.3  2003/06/03 13:16:47  dave
 	Added initial iter 02 code
-
+	
 	Revision 1.20  2003/05/30 15:26:17  Dumbledore
 	Added SOAP request generator.
 	
@@ -147,8 +150,6 @@
 		<path id="build.classpath">
 			<!-- Our own classes -->
 			<pathelement path="build/classes"/>
-			<!-- Our own libraries -->
-			<fileset dir="lib" includes="**/*.jar"/>
 			<!-- The JUnit libraries -->
 			<pathelement path="${junit.classpath}"/>
 		</path>
