*** empty log message ***

--- a/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/src/java/org/astrogrid/jes/jobcontroller/ASTROGRID_jesconfig.properties
@@ -53,23 +53,35 @@ SERVICE.TABLENAME=SERVICE
 #
 # Submit Job Response Template
 #
-SUBMIT.JOB.RESPONSE= /
+SUBMIT_JOB_RESPONSE.TEMPLATE= /
 <?xml version = '1.0' encoding = 'UTF8'?> /
-	<response> /
-	   <job> /
-		  <userid>{0}</userid> /
-		  <community>{1}</community> /
-		  <time>{2}</time> /
-		  <jobid>{3}</jobid> /
-	   </job> /
-	   <message>{4}</message> /
-	 </response>
+<response> /
+   <job> /
+	  <userid>{0}</userid> /
+	  <community>{1}</community> /
+	  <time>{2}</time> /
+	  <jobid>{3}</jobid> /
+   </job> /
+   <message>{4}</message> /
+</response>
 
 #
 # Location of our JobScheduler
 #	 
 SCHEDULER.URL=http://hydra.star.le.ac.uk/astrogrid/services/SchedulerService	 
-	 
+
+#
+# Schedule Job Request Template
+#
+SCHEDULE_JOB_REQUEST.TEMPLATE= /
+<?xml version = '1.0' encoding = 'UTF8'?> /
+<job name='{0}'> /
+   <userid>{1}</userid> /
+   <community>{2}</community> /
+   <time>{3}</time> /
+   <jobid>{4}</jobid> /
+</job> /
+
 	 
 	 
 	 
