--- a/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/src/java/org/astrogrid/datacenter/ASTROGRID_datasetconfig.properties
@@ -91,3 +91,79 @@ MYSPACE.URL=www.star.le.ac.uk/MySpace
 JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
 JOB.DATASOURCE=java:comp/env/job-datasource
 JOB.TABLENAME=JOB
+
+#
+# Catalog specific UCD to Column Headings mappings go here. The format is:
+# <catalog-name>.<table-name>.<UCD>=<value>
+#
+USNOB.USNOB.POS_EQ_RA=URA
+USNOB.USNOB.POS_EQ_DEC=UDEC
+USNOB.USNOB.PERR=PERR
+USNOB.USNOB.POS_EQ_PMRA=RAPM
+USNOB.USNOB.POS_EQ_PMDEC=DECPM
+USNOB.USNOB.TYCHO=TYCHO
+USNOB.USNOB.RAERR=RAERR
+USNOB.USNOB.DECERR=DECERR
+USNOB.USNOB.PMPROB=PMPROB
+USNOB.USNOB.PMCAT=PMCAT
+USNOB.USNOB.NDETS=NDETS
+USNOB.USNOB.DSPIKE=DSPIKE
+USNOB.USNOB.YS4=YS4
+USNOB.USNOB.EPOCH=EPOCH
+USNOB.USNOB.PHOT_PHG_B=B1MAG
+USNOB.USNOB.PHOT_PHG_R=R1MAG
+USNOB.USNOB.PHOT_PHG_B=B2MAG
+USNOB.USNOB.PHOT_PHG_R=R2MAG
+USNOB.USNOB.NMAG=NMAG
+USNOB.USNOB.B1STAR=B1STAR
+USNOB.USNOB.R1STAR=R1STAR
+USNOB.USNOB.B2STAR=B2STAR
+USNOB.USNOB.R2STAR=R2STAR
+
+USNOB.TABLEA.POS_EQ_RA=URA
+USNOB.TABLEA.POS_EQ_DEC=UDEC
+USNOB.TABLEA.PERR=PERR
+USNOB.TABLEA.POS_EQ_PMRA=RAPM
+USNOB.TABLEA.POS_EQ_PMDEC=DECPM
+USNOB.TABLEA.TYCHO=TYCHO
+USNOB.TABLEA.RAERR=RAERR
+USNOB.TABLEA.DECERR=DECERR
+USNOB.TABLEA.PMPROB=PMPROB
+USNOB.TABLEA.PMCAT=PMCAT
+USNOB.TABLEA.NDETS=NDETS
+USNOB.TABLEA.DSPIKE=DSPIKE
+USNOB.TABLEA.YS4=YS4
+USNOB.TABLEA.EPOCH=EPOCH
+USNOB.TABLEA.PHOT_PHG_B=B1MAG
+USNOB.TABLEA.PHOT_PHG_R=R1MAG
+USNOB.TABLEA.PHOT_PHG_B=B2MAG
+USNOB.TABLEA.PHOT_PHG_R=R2MAG
+USNOB.TABLEA.NMAG=NMAG
+USNOB.TABLEA.B1STAR=B1STAR
+USNOB.TABLEA.R1STAR=R1STAR
+USNOB.TABLEA.B2STAR=B2STAR
+USNOB.TABLEA.R2STAR=R2STAR
+
+USNOB.TABLEB.POS_EQ_RA=URA
+USNOB.TABLEB.POS_EQ_DEC=UDEC
+USNOB.TABLEB.PERR=PERR
+USNOB.TABLEB.POS_EQ_PMRA=RAPM
+USNOB.TABLEB.POS_EQ_PMDEC=DECPM
+USNOB.TABLEB.TYCHO=TYCHO
+USNOB.TABLEB.RAERR=RAERR
+USNOB.TABLEB.DECERR=DECERR
+USNOB.TABLEB.PMPROB=PMPROB
+USNOB.TABLEB.PMCAT=PMCAT
+USNOB.TABLEB.NDETS=NDETS
+USNOB.TABLEB.DSPIKE=DSPIKE
+USNOB.TABLEB.YS4=YS4
+USNOB.TABLEB.EPOCH=EPOCH
+USNOB.TABLEB.PHOT_PHG_B=B1MAG
+USNOB.TABLEB.PHOT_PHG_R=R1MAG
+USNOB.TABLEB.PHOT_PHG_B=B2MAG
+USNOB.TABLEB.PHOT_PHG_R=R2MAG
+USNOB.TABLEB.NMAG=NMAG
+USNOB.TABLEB.B1STAR=B1STAR
+USNOB.TABLEB.R1STAR=R1STAR
+USNOB.TABLEB.B2STAR=B2STAR
+USNOB.TABLEB.R2STAR=R2STAR
