*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -4,20 +4,34 @@
 # Format of the message key: AGJESEnnnnn
 # AG       AstroGrid
 # JES      Job Entry System
-# E/W/I    E = error,  W = warning  I = information
+# E/W/I/Z  E = error,  W = warning  I = information  Z = error messages with text hard coded in program
 # nnnnn    unique message number
 #
 # Format of the message body:
 # <jes-component-name>: <rest-of-message>
 # See documentation for MessageFormat class for inserts into messages (e.g. {0})
 #
-AGDJES00???=YOU FORGOT TO DEFINE A MESSAGE!!!
+# Note Z style messages (e.g. AGJESZ00001) are included here for documentary purposes only.
+#
 
-AGJESE00010=JobController: Could not read my configuration file {0}
-AGJESE00020=JobController: Not initialized. Perhaps my configuration file is missing.
-AGJESE00030=JobController: Failed to parse Job Submission Request.
-AGJESE00040=JobController: Query ultimately failed. See previous messages.
+AGJESZ00001=AGJESZ00001:<jes-component-name>: Could not read my configuration file {0}
+AGJESZ00002=AGJESZ00002:<jes-component-name>: Not initialized. Perhaps my configuration file is missing.
+AGJESZ00003=AGJESZ00003:Message: Message key is null.
+AGJESZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
+AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 
-AGJESE00140=Job: Could not create JobFactory {0}
-AGJESE00150=JobFactory: Could not create Job datasource {0}
-AGJESE00160=JobFactory: Could not create connection to Job datasource.
+AGJESE00030=:JobController: Failed to parse Job Submission Request.
+AGJESE00040=:JobController: Job submission ultimately failed. See previous messages.
+AGJESI00050=:JobController: Job successfully submitted. 
+
+AGJESE00140=:Job: Could not create JobFactory {0}
+AGJESE00150=:JobFactory: Could not create Job datasource {0}
+AGJESE00160=:JobFactory: Could not create connection to Job datasource.
+
+AGJESE00300=:JobFactory: Failure to commit changes to Job datasource.
+AGJESE00310=:JobFactory: Failure in rolling back changes to Job datasource.
+AGJESE00320=:JobFactory: Failed to close connection to Job datasource.
+
+AGJESE00400=:JobController: Failed to format response message.
+AGJESE00410=:JobController: Failed to inform job scheduler.
+AGJESE00420=:JobController: Failed to format job schedule request.
