*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -53,8 +53,7 @@ PARSER.VALIDATION=false
 # <catalog-name>.<partial-key>=<value>
 #
 USNOB.QUERYFACTORY=org.astrogrid.datacenter.impl.QueryFactoryImpl
-USNOB.DATASOURCE=java:comp/env/my-datasource
-
+USNOB.DATASOURCE=java:comp/env/jdbc/usnob
 
 #
 # Factory for creating VOTables. At present only one is supported.
@@ -89,7 +88,7 @@ MYSPACE.URL=www.star.le.ac.uk/MySpace
 # The job database is probably a temporary requirement.
 #
 JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
-JOB.DATASOURCE=java:comp/env/job-datasource
+JOB.DATASOURCE=java:comp/env/jdbc/job
 JOB.TABLENAME=JOB
 
 #
