*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -39,7 +39,10 @@ AGDTCE00140=:Job: Could not create JobFactory {0}
 AGDTCE00150=:JobFactory: Could not create Job datasource {0}
 AGDTCE00160=:JobFactory: Could not create connection to Job datasource.
 AGDTCE00170=:JobFactory: Unable to create Job from request document. 
-AGDTCE00180=:JobImpl: Unable to creat Job from request document
+AGDTCE00180=:Job: Unable to create Job from request document
+AGDTCE00190=:JobFactory: Unable to update Job with jobid {0}
+AGDTCE00192=:JobFactory: Unable to find Job with jobid {0}
+AGDTCE00194=:JobFactory: Unable to delete Job with jobid {0}
 
 AGDTCE00200=:From: Could not create From from element.
 AGDTCE00210=:From: Could not create SQL for From.
