--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -35,7 +35,7 @@ PARSER.VALIDATION=false
 # A DBMS can be commercial (e.g. DB/2, Oracle, SQLServer), 
 # open source (e.g. MySQL, PostgreSQL), or even completely home grown.
 # Each of these COULD give rise to different QueryFactory implementations.
-# It is required each implement the org.astrogrid.datacenter.QueryFactory interface.
+# It is required each implement the org.astrogrid.datacenter.job.QueryFactory interface.
 #
 # Each catalog can be held within a different datasource (database), 
 # or not, as the case may be. We require the JNDI location in order
@@ -58,7 +58,7 @@ USNOB.DATASOURCE=java:comp/env/jdbc/usnob
 #
 # Factory for creating VOTables. At present only one is supported.
 # Each datacenter can write their own version, if they want to. 
-# This must implement the org.astrogrid.datacenter.VOTableFactory interface.
+# This must implement the org.astrogrid.datacenter.votable.VOTableFactory interface.
 #
 VOTABLEFACTORY=org.astrogrid.datacenter.impl.VOTableFactoryImpl
 
