--- a/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
+++ b/astrogrid/mySpace/schema/MySpaceManagerResponse.properties
@@ -15,5 +15,5 @@ MYSPACEMANAGER_RESPONSE= \
         <size>{8}</size> \
         <type>{9}</type> \
         <permissionsMask>{10}</permissionsMask> \
-    </elements> /
-</results> /
+    </elements> \
+</results>
